WebSecurity implemented, Big update