@@ -1,15 +1,14 @@
 package com.jarno.cr8ive.persistance.converter;
 
-import com.jarno.cr8ive.persistance.gateways.mapper.ContentJpaMapper;
-import com.jarno.cr8ive.persistance.gateways.mapper.HashtagJpaMapper;
-import com.jarno.cr8ive.persistance.gateways.mapper.PostJpaMapper;
 import com.jarno.cr8ive.domain.Content;
 import com.jarno.cr8ive.domain.Post;
+import com.jarno.cr8ive.persistance.repository_impl.entity.ContentJpaMapper;
+import com.jarno.cr8ive.persistance.repository_impl.entity.HashtagJpaMapper;
+import com.jarno.cr8ive.persistance.repository_impl.entity.PostJpaMapper;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class GetPostByUserIdConverter {
 
@@ -32,7 +31,7 @@ public class GetPostByUserIdConverter {
                         .hashtagIds(mapHashtagJpaMappers(jpaMapper.getHashtags()))
                         .userId(jpaMapper.getUserId())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Content> mapContentJpaMappers(List<ContentJpaMapper> contentJpaMappers) {
@@ -45,7 +44,7 @@ public class GetPostByUserIdConverter {
                         .url(contentJpaMapper.getFileUrl())
                         .type(contentJpaMapper.getExtension())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Integer> mapHashtagJpaMappers(Set<HashtagJpaMapper> hashtagJpaMappers) {
@@ -55,6 +54,6 @@ public class GetPostByUserIdConverter {
 
         return hashtagJpaMappers.stream()
                 .map(HashtagJpaMapper::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
